Add more profile services